[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://PSXDef.tres" type="Material" id=2]
[ext_resource path="res://Sounds/EnemyDie.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 1.5

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 1.5

[sub_resource type="SphereShape" id=4]
margin = 0.001
radius = 20.0

[node name="Enemy" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
enabled = true
cast_to = Vector3( 10, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, -3.25841e-08, 0.1, 0, -0.2, -1.62921e-08, 0, 0.7, -0.4 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="SightRange" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 4 )

[node name="Eyes" type="Spatial" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WanderTimer" type="Timer" parent="."]
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="finished" from="Audio" to="." method="_on_Audio_finished"]
